@@ -93,6 +93,10 @@ class TeamDashboardControllerTest extends ControllerTest {
         teamDashboardUpdateReqDto = new TeamDashboardUpdateReqDto("updateTitle", "updateDescription", emails);
         teamDashboard = teamDashboardSaveReqDto.toEntity(member);
 
+        ReflectionTestUtils.setField(teamDashboard, "id", 1L);
+        ReflectionTestUtils.setField(member, "id", 1L);
+        ReflectionTestUtils.setField(teamDashboard, "member", member);
+
         teamDashboardController = new TeamDashboardController(teamDashboardService);
 
         mockMvc = MockMvcBuilders.standaloneSetup(teamDashboardController)
@@ -193,17 +197,11 @@ class TeamDashboardControllerTest extends ControllerTest {
     @Test
     void 팀_대시보드_전체_조회() throws Exception {
         // given
-        Page<TeamDashboard> teamDashboardPage = new PageImpl<>(
-                List.of(teamDashboard),
-                PageRequest.of(0, 10),
-                1
-        );
-        TeamDashboardListResDto response = TeamDashboardListResDto.of(
-                Collections.singletonList(TeamDashboardInfoResDto.of(member, teamDashboard)),
-                PageInfoResDto.from(teamDashboardPage)
+        TeamDashboardListResDto response = TeamDashboardListResDto.from(
+                Collections.singletonList(TeamDashboardInfoResDto.of(member, teamDashboard))
         );
 
-        given(teamDashboardService.findForTeamDashboard(anyString(), any())).willReturn(response);
+        given(teamDashboardService.findForTeamDashboard(anyString())).willReturn(response);
 
         // when & then
         mockMvc.perform(get("/api/dashboards/team/")
@@ -233,9 +231,8 @@ class TeamDashboardControllerTest extends ControllerTest {
                                         .description("팀 대시보드의 완료된 블록 진행률"),
                                 fieldWithPath("data.teamDashboardInfoResDto[].joinMembers")
                                         .description("팀 대시보드에 참여한 사용자"),
-                                fieldWithPath("data.pageInfoResDto.currentPage").description("현재 페이지"),
-                                fieldWithPath("data.pageInfoResDto.totalPages").description("전체 페이지"),
-                                fieldWithPath("data.pageInfoResDto.totalItems").description("전체 아이템")
+                                fieldWithPath("data.pageInfoResDto")
+                                        .description("페이지 정보가 없습니다.")
                         )
                 ))
                 .andExpect(status().isOk());
@@ -378,6 +375,33 @@ class TeamDashboardControllerTest extends ControllerTest {
                                 fieldWithPath("data.searchMembers[].id").description("대시보드 아이디"),
                                 fieldWithPath("data.searchMembers[].picture").description("내 아이디"),
                                 fieldWithPath("data.searchMembers[].email").description("팀 대시보드 생성자 아이디")
+                        )
+                ))
+                .andExpect(status().isOk());
+    }
+
+    @DisplayName("팀 대시보드에 초대 알림을 전송합니다")
+    @Test
+    void 팀_대시보드_초대() throws Exception {
+        // given
+        doNothing().when(teamDashboardService)
+                .inviteMember(member.getEmail(), joinMember.getEmail(), 1L);
+
+        mockMvc.perform(get("/api/dashboards/team/{dashboardId}/invite?email=%s", 1L, joinMember.getEmail())
+                        .header("Authorization", "Bearer valid-token")
+                        .accept(MediaType.APPLICATION_JSON))
+                .andDo(print())
+                .andDo(document("dashboard/team/leave",
+                        preprocessRequest(prettyPrint()),
+                        preprocessResponse(prettyPrint()),
+                        requestHeaders(
+                                headerWithName("Authorization").description("JWT 토큰")
+                        ),
+                        pathParameters(
+                                parameterWithName("dashboardId").description("팀 대시보드 ID")
+                        ),
+                        queryParameters(
+                                parameterWithName("email").description("초대 받는 사람 이메일")
                         )
                 ))
                 .andExpect(status().isOk());
